--- a/app/globals.css
+++ b/app/globals.css
@@ -40,11 +40,11 @@
     --background: #003e1f;
     --foreground: #ffffff;
 
-    --muted: #30d5c7;
+    --muted: #507255;
     --muted-foreground: #373737;
 
-    --popover: #49393b;
-    --popover-foreground: #30d5c8;
+    --popover: #507255;
+    --popover-foreground: #ffffff;
 
     --card: #49393b;
     --card-foreground: #49393b;
